# eostac

./: README.md  pyproject.toml  setup.cfg
src/eostac/analysis/: Dockerfile  lambda_function.py  test.py
src/eostac/data/: batch_grid_to_tile.py  batch_grid_to_tile.sh  batch_raw_to_grid.py  batch_raw_to_grid.sh  water_clarity_analysis.py  water_distribution_analysis.py
src/eostac/data/module/: create_grid.py  task.py  utils.py  xyz.py
src/eostac/nginx/: docker-compose.yml
src/eostac/nginx/conf.d/: default.conf
src/eostac/stac_fastapi/: docker-compose.yml  install_docker.sh  make_file_catalog.py  make_s3_catalog.py  s3_util.py
src/geosprite/stac/data/: batch_raw_to_grid.py  prepare_analysis_data.sh
src/geosprite/stac/data/module/: __init__.py  create_grid.py  xyz.py
src/geosprite/stac/stac_fastapi/: make_catalog.py  make_file_catalog.py
