[metadata]
name = eo-stac
version = 1.0
author = watercore
author_email = watercore2001@gmail.com

[options]
python_requires = >=3.10
install_requires = rasterio ~= 1.3
                   pystac ~= 1.8
                   fiona ~= 1.9
                   shapely ~= 2.0

zip_safe = False

package_dir = =src
packages = find_namespace:

[options.packages.find]
where = src
